# Downloader

./: .gitignore  README.md  main.py  pyproject.toml
core/: __init__.py
downloader/: main.py
downloader/style/: base.tcss
